# plugin-factory-demo

./: .clang-format  .gitignore  CMakeLists.txt  LinkerExample.md  README.md  custom_types.cpp  factory.cpp  registry.cpp
dep-inversion/lib-interface/include/: SquareLib.h  abstract_lib_factory.h  double_lib.h  lib_interface.h
include/: custom_types.h  factory.h  registry.h
src/: custom_types.cpp  main.cpp
